@@ -1044,9 +1044,12 @@ AC_DEFUN([SC_CONFIG_CFLAGS], [
 
     AC_CACHE_CHECK([if compiler supports visibility "hidden"],
 	tcl_cv_cc_visibility_hidden, [
-	    AS_IF([test "$GCC" = yes -a "$SHARED_BUILD" = 1], [
+	    AS_IF([test "$SHARED_BUILD" = 1], [
 		hold_cflags=$CFLAGS; CFLAGS="$CFLAGS -fvisibility=hidden -Werror"
-		AC_TRY_COMPILE(,, tcl_cv_cc_visibility_hidden=yes,
+		AC_TRY_COMPILE(,[#if !defined(__GNUC__) || __GNUC__ < 4
+#error visibility hidden is not supported for this compiler
+#endif
+		], tcl_cv_cc_visibility_hidden=yes,
 		    tcl_cv_cc_visibility_hidden=no)
 		CFLAGS=$hold_cflags
 	    ], [
