@@ -1,3 +1,8 @@
+2011-04-11  Jan Nijtmans  <nijtmans@users.sf.net>
+	* generic/tcl.h:    fix for [Bug 3281728]: Tcl sources from 2011-04-06 do
+	* unix/tcl.m4:      not build on GCC9 (RH9)
+	* unix/configure:
+
 2011-04-08  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinPort.h: fix for [Bug 3280043]: win2k: unresolved DLL imports
